fix: add member of class
