# src/main/model/dto/request/class_request/class.go
@@ -9,3 +9,8 @@ type ModifyClassSubject struct {
 	ClassCode   string `json:"class_code"`
 	SubjectCode string `json:"subject_code"`
 }
+
+type ModifyClassMemberRequest struct {
+	ClassId   uint   `json:"class_id"`
+	StudentId []uint `json:"student_id"`
+}
