# src/main/routes/academic.go
@@ -91,6 +91,9 @@ func academicRoutes(gr *gin.RouterGroup) {
 	{
 		masterClass.GET("/all", jwt.RequirePermission([]string{"ADMIN", "TEACHER"}, "list"),
 			redisstore.CacheMiddleware(redisstore.CacheClass, redisstore.TtlDuration), classController.GetAllClass)
+		masterClass.GET("/:classId/member", jwt.RequirePermission([]string{"ADMIN", "TEACHER"}, "list"), classController.MemberOfClass)
+		masterClass.GET("/member/add", jwt.RequirePermission([]string{"ADMIN", "TEACHER"}, "create"), classController.AddMemberOfClass)
+		masterClass.GET("/member/:id/delete", jwt.RequirePermission([]string{"ADMIN", "TEACHER"}, "delete"), classController.DeleteMemberOfClass)
 		masterClass.GET("/detail/:id", jwt.RequirePermission([]string{"ADMIN", "TEACHER"}, "read"), classController.GetDetailClass)
 		masterClass.POST("/create", jwt.RequirePermission([]string{"ADMIN"}, "create"), classController.CreateNewClass)
 		masterClass.PUT("/update/:id", jwt.RequirePermission([]string{"ADMIN"}, "update"), classController.UpdateClass)
